[package]
name = "bob"
version = "0.1.0"
authors = ["Aidan Woolley <aw813@cam.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catnip = {path = "../../catnip"}
futures = "0.3"
mininet-runtime = {path = "../mininet-runtime"}