[package]
name = "mininet-runtime"
version = "0.1.0"
authors = ["Aidan Woolley <aw813@cam.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catnip = {path = "../../catnip"}
futures = "0.3"
rand = { version = "0.7.3", features = ["small_rng"] }
socket2 = "0.3"
libc = "0.2"